syntax = "proto3";

option csharp_namespace = "Grpc.Contracts";

package GrpcContracts;

service ToDoGrpcService {
  
  rpc Create(CreateToDoRequest) returns(ReadToDoResponse);

  rpc Read(ReadToDoRequest) returns(ReadToDoResponse);
  
  rpc ReadAll(ReadAllToDoRequest) returns (ReadAllToDoResponse);
  
  rpc Update(UpdateToDoRequest) returns(ReadToDoResponse);
  
  rpc Delete(DeleteToDoRequest) returns(DeleteToDoResponse);
}

message ReadToDoResponse {
  int32 id = 1;
  string title = 2;
  string description = 3 ; 
  string to_do_status = 4;
}

message ReadAllToDoRequest {
}

message ReadAllToDoResponse {
  repeated ReadToDoResponse to_do = 1 ;
}

message CreateToDoRequest {
  string title = 1;
  string description = 2 ; 
}

message ReadToDoRequest {
  int32 id = 1;
}


message UpdateToDoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3 ; 
}

message DeleteToDoRequest {
  int32 id = 1;
}

message DeleteToDoResponse {
  int32 id = 1 ;
}